# ghs

./: .env copy.example  PUBLISHING.md  README.md  plan.md  pyproject.toml
.github/workflows/: copilot-setup-steps.yml  publish-to-pypi.yml  test.yml  tests.yml
src/ghs/: __init__.py  commands.py  env_utils.py  gh_utils.py
src/ghss/: commands.py  env_utils.py  gh_utils.py
tests/: README.md  __init__.py  test_commands.py  test_e2e.py  test_env_utils.py  test_gh_utils.py
